--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 CONFIG_ENV=config.env
 
-KERNEL_SOURCE=https://github.com/BYZYB/android_kernel_xiaomi_libra
-KERNEL_SOURCE_BRANCH=master 
+KERNEL_SOURCE=https://github.com/Gah0/android_kernel_xiaomi_libra
+KERNEL_SOURCE_BRANCH=lineage-17.1
 KERNEL_CONFIG=arch/arm64/configs/libra_defconfig
 KERNEL_IMAGE_NAME=Image.gz-dtb
 ARCH=arm64
@@ -61,4 +61,4 @@ NEED_DTBO=false
 
 # Build boot images
 BUILD_BOOT_IMG=false
-SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
+SOURCE_BOOT_IMAGE=https://drive.usercontent.google.com/download?id=18nOmLOPniQbjxepEe4fp4zHKq3DlPqDZ&export=download
